--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,16 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+apply plugin: 'com.android.application'
+
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android'
+
+
 
 android {
-    compileSdk 30
+    compileSdk 28
 
     defaultConfig {
         applicationId "com.example.android.daggerappllication"
-        minSdk 25
+        minSdk 28
         targetSdk 30
         versionCode 1
         versionName "1.0"
@@ -65,4 +67,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation 'com.google.android.material:material:1.0.0'
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+    // dagger
+    def dagger = '2.36'
+    implementation "com.google.dagger:dagger:${dagger}"
+    kapt "com.google.dagger:dagger-compiler:${dagger}"
 }
